--- a/index.html
+++ b/index.html
@@ -13,26 +13,17 @@
 </head>
 
 <body>
-    <main>
-        <nav class="navbar">
-            <div class="container">
-                <a class="navbar-brand" href="#">Never expand</a>
-                <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </main>
+  <main>
+    <nav class="navbar">
+      <div class="container">
+        <button type="button" class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+    </nav>
+  </main>
 </body>
 
 </html>
