--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <nav class="navbar">
+    <nav class="navbar py-30">
       <div class="container">
         <button type="button" class="hamburger">
           <span></span>
@@ -23,7 +23,49 @@
         </button>
       </div>
     </nav>
+    <section>
+      <div class="container">
+        <div class="tab">
+          <div class="tab__nav">
+            <ul>
+              <li class="active">
+                <span>二聯發票</span>
+              </li>
+              <li>
+                <span>公司發票</span>
+              </li>
+              <li>
+                <span>捐贈發票</span>
+              </li>
+            </ul>
+          </div>
+          <i class="icon icon-right tab__nav--next"></i>
+          <div class="tab__content">
+            <div class="tab__content__pane active">
+              <div class="h3 font-weight-500 my-0">第一項標題假字</div>
+              <p class="mb-0">
+                  假字假字假字假字假字假字假字假字假字假字假字假字假字假字假字。
+              </p>
+            </div>
+            <div class="tab__content__pane">
+              <div class="h3 font-weight-500 my-0">第二項標題假字</div>
+              <p class="mb-0">
+                  假字假字假字假字假字假字假字假字，假字假字假字假字假字假字假字假字假字假字假字假字假字。
+              </p>
+            </div>
+            <div class="tab__content__pane">
+              <div class="h3 font-weight-500 my-0">第三項標題假字</div>
+              <p class="mb-0">
+                  假字假字假字假字，假字假字假字假字假字假字假字，假字假字假字假字假字假字假字假字假字。假字假字假字。
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <script src="assets/js/cw.js"></script>
 </body>
 
 </html>
