--- a/digital/alert.html
+++ b/digital/alert.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>顏色 Color</title>
+    <title>警示框 Alert</title>
     <link rel="shortcut icon" href="https://www.cw.com.tw/assets_new/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="../assets/css/cw.css">
     <link rel="stylesheet" href="../assets/css/system.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 </head>
 <body>
     <header>
@@ -105,60 +107,50 @@
                         </li>
                     </ul>
                 </aside>
-                <article class="col-md">
+                <article class="col-md ps-md-0">
                     <section>
-                        <h1 class="mt-0">顏色 Color</h1>
-                        <p class="my-0">
-                            《天下雜誌》使用顏色來傳達界面中的功能，便於我們建立系統性視覺範本，讓《天下》數位產品與使用者的互動能夠更容易、更可以被預測。白、黑、藍、紅，是《天下》數位產品的顏色。顏色沒有先後順序，重要的是哪種顏色最適合傳達你想要的信息。
-                        </p>
-                        <p class="h5 mb-0">
-                            ※ 點選顏色複製 hex 色碼
+                        <h1 class="mt-0">警示框 Alert</h1>
+                        <p>
+                            有警告使用者的意思，需要對當前問題執行動作，按鈕動作通常為「確定」及「返回」或「取消」。
                         </p>
                     </section>
                     <section>
-                        <h2 class="h3 mt-0 mb-10">主色</h2>
-                        <div class="row mx-0 mb-20">
-                            <div class="col-md-1 py-10 bg-red-500">
-                                <div class="h4 my-0">Dark</div>
-                                <div class="h5 my-0">#9D0505</div>
+                        <div class="tab">
+                            <div class="tab__nav">
+                                <ul>
+                                    <li class="active">
+                                        <svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M374.24,266.74l12.57-12.57h.01v-.02l44.34-44.33h.01l44.34-44.35h0l24.36-24.36c7.82-7.82,12.12-18.21,12.12-29.27s-4.31-21.45-12.12-29.27L429.44,12.13C421.62,4.31,411.22,0,400.17,0s-21.45,4.31-29.27,12.12l-125.64,125.64L159.98,52.48c-14.28-14.28-32.17-24.44-51.74-29.39L18.68,.46c-5.12-1.29-10.55,.2-14.28,3.94C.66,8.13-.84,13.56,.46,18.68L23.1,108.24c4.95,19.57,15.11,37.47,29.39,51.74l85.28,85.28L12.12,370.9C4.31,378.72,0,389.11,0,400.17s4.31,21.45,12.12,29.27l70.44,70.44c7.82,7.82,18.21,12.13,29.27,12.13s21.45-4.31,29.27-12.12l68.68-68.68s.02-.02,.03-.03,.02-.02,.03-.03l56.9-56.9,115.5,115.5c14.82,14.82,34.28,22.23,53.75,22.23s38.93-7.41,53.75-22.23c29.64-29.64,29.64-77.86,0-107.49l-115.5-115.5ZM52.18,100.88L35.71,35.71l65.18,16.48c14.33,3.62,27.43,11.06,37.88,21.51l11.83,11.83-65.07,65.07-11.83-11.83c-10.45-10.45-17.89-23.55-21.51-37.88Zm54.55,70.92l65.07-65.07,52.24,52.24-65.07,65.07-52.24-52.24Zm5.1,310.2c-3.04,0-5.9-1.19-8.06-3.34l-70.44-70.44c-2.15-2.15-3.34-5.01-3.34-8.06s1.18-5.91,3.34-8.06L392.11,33.34c2.15-2.15,5.02-3.34,8.06-3.34s5.9,1.19,8.06,3.34l70.44,70.44c2.15,2.15,3.34,5.01,3.34,8.06s-1.19,5.91-3.34,8.06l-13.75,13.75-45.76-45.76c-5.86-5.86-15.35-5.86-21.21,0-5.86,5.86-5.86,15.35,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.36-5.86-21.21,0-5.86,5.86-5.86,15.35,0,21.21l23.58,23.58-23.14,23.14-45.76-45.76c-5.86-5.86-15.36-5.86-21.21,0-5.86,5.86-5.86,15.35,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.36-5.86-21.21,0s-5.86,15.36,0,21.21l23.58,23.58-22.74,22.74-45.76-45.76c-5.86-5.86-15.35-5.86-21.21,0-5.86,5.86-5.86,15.36,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.35-5.86-21.21,0s-5.86,15.36,0,21.21l23.58,23.58-23.14,23.14-45.76-45.76c-5.86-5.86-15.35-5.86-21.21,0s-5.86,15.36,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.35-5.86-21.21,0s-5.86,15.36,0,21.21l23.58,23.58-13.75,13.75c-2.15,2.15-5.01,3.34-8.06,3.34h0Zm186.62-139.47s.04-.04,.06-.06,.04-.04,.06-.06l43.87-43.87,.02-.02,.02-.02,10.54-10.54,63.56,63.56-65.07,65.07-63.56-63.56,10.5-10.5Zm170.07,126c-17.94,17.94-47.13,17.94-65.07,0l-30.73-30.73,65.07-65.07,30.73,30.73c17.94,17.94,17.94,47.13,0,65.07Z"/></svg><span>Design</span>
+                                    </li>
+                                    <li>
+                                        <svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M467,0H45C20.19,0,0,20.19,0,45V467c0,24.81,20.19,45,45,45H467c24.81,0,45-20.19,45-45V45c0-24.81-20.19-45-45-45Zm15,467c0,8.27-6.73,15-15,15H45c-8.27,0-15-6.73-15-15V150H482V467Zm0-347H30V45c0-8.27,6.73-15,15-15H467c8.27,0,15,6.73,15,15V120Z"/><path d="M127.21,316l49.39-49.39c5.86-5.86,5.86-15.36,0-21.21-5.86-5.86-15.35-5.86-21.21,0l-60,60c-5.86,5.86-5.86,15.36,0,21.21l60,60c5.86,5.86,15.35,5.86,21.21,0s5.86-15.36,0-21.21l-49.39-49.39Z"/><path d="M416.61,305.39l-60-60c-5.86-5.86-15.36-5.86-21.21,0s-5.86,15.36,0,21.21l49.39,49.39-49.39,49.39c-5.86,5.86-5.86,15.36,0,21.21s15.36,5.86,21.21,0l60-60c5.86-5.86,5.86-15.36,0-21.21Z"/><path d="M290.74,211.77c-7.86-2.62-16.35,1.63-18.97,9.49l-60,180c-2.62,7.86,1.63,16.35,9.49,18.97,7.86,2.62,16.35-1.63,18.97-9.49l60-180c2.62-7.86-1.63-16.36-9.49-18.97Z"/><path d="M106,60h-30c-8.28,0-15,6.72-15,15s6.72,15,15,15h30c8.28,0,15-6.72,15-15s-6.72-15-15-15Z"/><path d="M196,60h-30c-8.28,0-15,6.72-15,15s6.72,15,15,15h30c8.28,0,15-6.72,15-15s-6.72-15-15-15Z"/><path d="M286,60h-30c-8.28,0-15,6.72-15,15s6.72,15,15,15h30c8.28,0,15-6.72,15-15s-6.72-15-15-15Z"/></svg><span>Html</span>
+                                    </li>
+                                </ul>
                             </div>
-                            <div class="col-md-2 py-10 bg-red-300">
-                                <div class="h4 my-0">Main</div>
-                                <div class="h5 my-0">#D60C18</div>
-                            </div>
-                            <div class="col-md-1 py-10 bg-red-100">
-                                <div class="h4 my-0">Faded</div>
-                                <div class="h5 my-0">#FEEBEC</div>
-                            </div>
-                        </div>
-                        <h2 class="h3 mt-0 mb-10">輔色</h2>
-                        <div class="row mx-0 mb-20">
-                            <div class="col-md py-10 bg-gray-500">
-                                <div class="h4 my-0">Dark</div>
-                                <div class="h5 my-0">#48545D</div>
-                            </div>
-                            <div class="col-md py-10 bg-gray-400">
-                                <div class="h4 my-0">Main</div>
-                                <div class="h5 my-0">#939EA7</div>
-                            </div>
-                            <div class="col-md py-10 bg-gray-300">
-                                <div class="h4 my-0">Bright</div>
-                                <div class="h5 my-0">#D3D5D7</div>
-                            </div>
-                            <div class="col-md py-10 bg-gray-200">
-                                <div class="h4 my-0">Pastel</div>
-                                <div class="h5 my-0">#EEEEEE</div>
-                            </div>
-                            <div class="col-md py-10 bg-gray-100">
-                                <div class="h4 my-0">Faded</div>
-                                <div class="h5 my-0">#F7F7F7</div>
-                            </div>
-                        </div>
-                        <h2 class="h3 mt-0 mb-10">強調色</h2>
-                        <div class="row mx-0 mb-20 bg-surface">
-                            <div class="col py-15">
-                                <div class="h4 my-0">Main</div>
-                                <div class="h5 my-0">#003A9F</div>
+                            <i class="icon icon-right tab__nav--next"></i>
+                            <div class="tab__content py-20">
+                                <div class="tab__content__pane active">
+                                    <h2 class="mt-0 mb-10">Usage</h2>
+                                    <p class="mt-10 mb-20">
+                                        有警告使用者的意思，需要對當前問題執行動作，按鈕動作通常為「確定」及「返回」或「取消」。
+                                    </p>
+                                    <hr class="my-40">
+                                    <h2 class="mt-0 mb-10">Ｗhen to use</h2>
+                                    <p class="mt-10 mb-20">
+                                        Notification 的干擾小，傳達簡單的消息。
+                                    </p>
+                                </div>
+                                <div class="tab__content__pane">
+<pre><code class="javascript">
+    var a = 1;
+    function example () {
+        console.log("Hello World");
+    }
+
+</code></pre>
+<script type="text/javascript">
+    hljs.initHighlightingOnLoad();
+</script>
+                                </div>
                             </div>
                         </div>
                     </section>
