--- a/digital/iconography.html
+++ b/digital/iconography.html
@@ -107,7 +107,7 @@
                 </aside>
                 <article class="col-md">
                     <section>
-                        <h1 class="mt-0">圖示 Iconography</h1>
+                        <h1 class="mt-0 mb-10">圖示 Iconography</h1>
                         <p>
                             《天下》數位產品所使用的圖示：輔助使用者識別功能的工具，因此必須要有目的性地使用圖示。<br/>
                             過於詳細的圖示會增加使用者的認知負擔，圖示應該專注於簡單地幫助使用者理解。
