--- a/digital/typography.html
+++ b/digital/typography.html
@@ -107,7 +107,7 @@
                 </aside>
                 <article class="col-md">
                     <section>
-                        <h1 class="mt-0">文字 Typography</h1>
+                        <h1 class="mt-0 mb-10">文字 Typography</h1>
                         <p>
                             《天下》數位產品提供五個層級的文字樣式，讓主標、次標及文字內容在不同的階層上有明顯地不同。Noto Sans TC（思源黑體 Traditional Chinese）及 Roboto。希望利用更靈活的字重，讓使用者能更直覺地理解層級。
                         </p>
