--- a/digital/typography.html
+++ b/digital/typography.html
@@ -21,90 +21,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <aside class="col-md-auto">
-                    <ul>
-                        <li><span>品牌</span>
-                            <ul>
-                                <li><span>設計指南</span>
-                                    <ul>
-                                        <li><a href="../brand/principle.html">設計原則與範例</a></li>
-                                    </ul>
-                                </li>
-                                <li><span>LOGO CI</span>
-                                    <ul>
-                                        <li><a href="../brand/specification.html">基本規範</a></li>
-                                        <li><a href="../brand/graphic-application.html">平面應用</a></li>
-                                        <li><a href="../brand/digital-application.html">數位應用</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><span>平面產品</span>
-                            <ul>
-                                <li><span>Foundations</span>
-                                    <ul>
-                                        <li><a href="../graphic/color.html">Color</a></li>
-                                        <li><a href="../graphic/typography.html">Typography</a></li>
-                                    </ul>
-                                </li>
-                                <li><span>Patterns</span>
-                                    <ul>
-                                        <li><a href="../graphic/usage.html">Usage</a></li>
-                                        <li><a href="../graphic/charts.html">Charts</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><span>數位產品</span>
-                            <ul>
-                                <li><span>Foundations</span>
-                                    <ul>
-                                        <li><a href="../digital/color.html">Color</a></li>
-                                        <li><a href="../digital/typography.html">Typography</a></li>
-                                        <li><a href="../digital/iconography.html">Iconography</a></li>
-                                    </ul>
-                                </li>
-                                <li><span>Components</span>
-                                    <ul>
-                                        <li><span>Windows and Views</span>
-                                            <ul>
-                                                <li><a href="../digital/alert.html">Alerts</a></li>
-                                                <li><a href="../digital/cookie.html">Cookies</a></li>
-                                                <li><a href="../digital/dialog.html">Dialogs</a></li>
-                                                <li><a href="../digital/drawer.html">Drawer</a></li>
-                                                <li><a href="../digital/menu.html">Menu</a></li>
-                                                <li><a href="../digital/notification.html">Notification</a></li>
-                                                <li><a href="../digital/tab.html">Tabs</a></li>
-                                                <li><a href="../digital/tooltip.html">Tooltips</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><span>Controls</span>
-                                            <ul>
-                                                <li><a href="../digital/accordion.html">Accordions</a></li>
-                                                <li><a href="../digital/button.html">Buttons</a></li>
-                                                <li><a href="../digital/checkboxe.html">Checkboxes</a></li>
-                                                <li><a href="../digital/pagination.html">Paginations</a></li>
-                                                <li><a href="../digital/radio-button.html">Radio Buttons</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><span>Fields and Labels</span>
-                                            <ul>
-                                                <li><a href="../digital/search-fields.html">Search Fields</a></li>
-                                                <li><a href="../digital/text-fields.html">Text Fields</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><span>Patterns</span>
-                                    <ul>
-                                        <li><a href="../digital/generator/insider.html">insider 實驗產生器</a></li>
-                                        <li><a href="../digital/generator/cwdaily.html">電子報產生器</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </aside>
+                <aside class="col-md-auto"></aside>
                 <article class="col-md">
                     <section>
                         <h1 class="mt-0 mb-10">文字 Typography</h1>
@@ -173,8 +90,8 @@
                                     共同願景：希望透過網路無遠弗屆的特性，把苗栗在地的農產品推廣出去。
                                 </div>
                             </div>
-                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30">
-                                <i class="icon icon-download me-10"></i> Noto Sans TC.zip
+                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                                <i class="icon icon-download mr-10"></i> Noto Sans TC.zip
                             </a>
                         </div>
                         <hr class="my-30">
@@ -194,8 +111,8 @@
                                     外商挖台積、台積挖傳產　最狂「人才食物鏈」，啟動2022全台大加薪！
                                 </div>
                             </div>
-                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30">
-                                <i class="icon icon-download me-10"></i> Noto Serif TC.zip
+                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                                <i class="icon icon-download mr-10"></i> Noto Serif TC.zip
                             </a>
                         </div>
                         <hr class="my-30">
@@ -259,8 +176,8 @@
                                     Everyone is working remotely.
                                 </div>
                             </div>
-                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30">
-                                <i class="icon icon-download me-10"></i> Roboto.zip
+                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                                <i class="icon icon-download mr-10"></i> Roboto.zip
                             </a>
                         </div>
                     </section>
