--- a/aside.html
+++ b/aside.html
@@ -1,5 +1,4 @@
-function insertAside() {
-  let str = `<ul>
+<ul>
     <li><span>品牌</span>
         <ul>
             <li><span>設計指南</span>
@@ -59,7 +58,7 @@ function insertAside() {
                         <ul>
                             <li><a href="../digital/accordion.html">Accordions</a></li>
                             <li><a href="../digital/button.html">Buttons</a></li>
-                            <li><a href="../digital/checkbox.html">Checkboxes</a></li>
+                            <li><a href="../digital/checkboxe.html">Checkboxes</a></li>
                             <li><a href="../digital/pagination.html">Paginations</a></li>
                             <li><a href="../digital/radio-button.html">Radio Buttons</a></li>
                         </ul>
@@ -80,58 +79,4 @@ function insertAside() {
             </li>
         </ul>
     </li>
-  </ul>`;
-  document.querySelector('aside').innerHTML = str;
-}
-
-function naviArrow() {
-  let asideList = document.querySelectorAll('aside li');
-  asideList.forEach(element => {
-    if ( element.childElementCount > 1 ) {
-      element.parentElement.classList.add('ul--slide')
-    }
-  });
-}
-
-function naviByLink() {
-  let asideLink = document.querySelectorAll('aside li a');
-  asideLink.forEach((element, index) => {
-    if ( element.href.indexOf(window.location.pathname) > 0 ) {
-      element.classList.add('active');
-      element.parentElement.parentElement.parentElement.classList.add('opened');
-      element.parentElement.parentElement.parentElement.parentElement.parentElement.classList.add('opened');
-      element.parentElement.parentElement.parentElement.parentElement.parentElement.parentElement.parentElement.classList.add('opened');
-    }
-  });
-}
-
-function init() {
-  insertAside();
-  naviArrow();
-  naviByLink();
-}
-
-init();
-window.addEventListener('resize', function() {
-  init();
-});
-
-document.querySelector('aside').addEventListener('click', function(e) {
-  const lv1 = e.target.parentElement.parentElement.parentElement;
-  if ( lv1.nodeName.toLowerCase() === 'aside' ) {
-    for (let i = 0; i < lv1.children[0].children.length; i++) {
-      let lv1element = lv1.children[0].children[i];
-      lv1element.classList.remove('opened');
-      // 第二層關閉
-      for (let j = 0; j < lv1element.children[1].children.length; j++) {
-        let lv2element = lv1element.children[1].children;
-        lv2element[j].classList.remove('opened');
-        // 第三層關閉
-        for (let k = 0; k < lv2element[j].children[1].children.length; k++) {
-          lv2element[j].children[1].children[k].classList.remove('opened');
-        }
-      }
-    }
-  }
-  e.target.parentElement.classList.toggle('opened');
-});
+</ul>
